--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,10 @@ url = "https://github.com/wizai-solutions-gmbh/segment-play"
 
 [project.optional-dependencies]
 dev = [
-  "pre-commit==3.5.0"
+  "pre-commit==3.5.0",
+  "pytest==7.4.4",
+  "pytest-cov==4.1.0",
+  "python-dotenv==1.0.0"
 ]
 
 [tool.setuptools.packages.find]
