--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,8 @@ dev = [
   "pre-commit==3.6.0",
   "pytest==8.0.0",
   "pytest-cov==4.1.0",
-  "python-dotenv==1.0.1"
+  "python-dotenv==1.0.1",
+  "openai==1.11.0"
 ]
 
 [tool.setuptools.packages.find]
