add segmentation tests and some minor improvements

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,6 @@ pythonpath = src tests
 env_files =
     tests/.env
     .env
+filterwarnings =
+    ignore::DeprecationWarning:timm.layers
+    ignore::DeprecationWarning:timm.models
